--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/images/flag-banner-duotone.svg"
+      href="/mentoria-csv-projeto-my-custom-album/images/flag-banner-duotone.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Custom Album</title>
-    <script type="module" crossorigin src="/assets/index.845b9162.js"></script>
-    <link rel="stylesheet" href="/assets/index.4d87360a.css">
+    <script type="module" crossorigin src="/mentoria-csv-projeto-my-custom-album/assets/index.20ea24cf.js"></script>
+    <link rel="stylesheet" href="/mentoria-csv-projeto-my-custom-album/assets/index.4d87360a.css">
   </head>
   <body>
     <div id="root"></div>
