Add Firebase config, login, register, logout

--- a/index.html
+++ b/index.html
@@ -15,3 +15,27 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<!-- 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/mentoria-csv-projeto-my-custom-album/images/flag-banner-duotone.svg"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Custom Album</title>
+    <script type="module" crossorigin src="/mentoria-csv-projeto-my-custom-album/assets/index.20ea24cf.js"></script>
+    <link rel="stylesheet" href="/mentoria-csv-projeto-my-custom-album/assets/index.4d87360a.css">
+  </head>
+  <body>
+    <div id="root"></div>
+    
+  </body>
+</html>
+
+
+ -->
