--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
       href="/images/flag-banner-duotone.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Custom Album</title>
+    <meta
+      name="description"
+      content="Site para armazenar seus livros lidos, filmes assistidos e jogos zerados"
+    />
+    <meta name="author" content="Rafael Lima de Morais" />
+    <title>Album Personalizado</title>
   </head>
   <body>
     <div id="root"></div>
