--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
       href="/mentoria-csv-projeto-my-custom-album/images/flag-banner-duotone.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Site para armazenar seus livros lidos, filmes assistidos e jogos zerados"
+    />
+    <meta name="author" content="Rafael Lima de Morais" />
+    <title>Album Personalizado</title>
+    <script type="module" crossorigin src="/mentoria-csv-projeto-my-custom-album/assets/index.62406abf.js"></script>
+    <link rel="stylesheet" href="/mentoria-csv-projeto-my-custom-album/assets/index.60224ead.css">
+  </head>
+  <body>
+    <div id="root"></div>
+    
+  </body>
+</html>
+
+<!-- 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/mentoria-csv-projeto-my-custom-album/images/flag-banner-duotone.svg"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Custom Album</title>
     <script type="module" crossorigin src="/mentoria-csv-projeto-my-custom-album/assets/index.20ea24cf.js"></script>
     <link rel="stylesheet" href="/mentoria-csv-projeto-my-custom-album/assets/index.4d87360a.css">
@@ -17,3 +43,6 @@
     
   </body>
 </html>
+
+
+ -->
