--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/images/flag-banner-duotone.svg"
+      href="/assets/images/flag-banner-duotone.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <meta
       name="description"
       content="Site para armazenar seus livros lidos, filmes assistidos e jogos zerados"
